<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.profile"

    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLogInTwo"
        style="@style/groupStylewhite_A700"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageSave"
            android:layout_width="@dimen/_46pxh"
            android:layout_height="@dimen/_44pxh"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/_27pxh"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="@dimen/_27pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_save"
            tools:ignore="ContentDescription"
            tools:src="@drawable/img_save" />

        <LinearLayout
            android:id="@+id/linearColumnhiwelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="43dp"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginBottom="@dimen/_20pxv"
            android:gravity="start"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearRowhiwelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtHiWelcome"
                    style="@style/txtPoppinsbold30"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.87"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="Grocery kz" />

                <ImageView
                    android:id="@+id/imageImage296"
                    android:layout_width="@dimen/_30pxh"
                    android:layout_height="@dimen/_30pxh"
                    android:layout_marginStart="@dimen/_7pxh"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_marginBottom="@dimen/_7pxv"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_image296"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_image296" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutName"
                app:endIconMode="clear_text"

                app:startIconDrawable="@drawable/ic_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_60pxv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextText"
                     android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_50pxv"
                     android:ellipsize="end"
                    android:hint="@string/lbl_your_email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/_16pxh"
                    android:paddingTop="@dimen/_18pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingBottom="@dimen/_17pxv"
                    android:singleLine="true"
                    android:textColorHint="@color/black_900_7f"
                    tools:ignore="Autofill" />
            </com.google.android.material.textfield.TextInputLayout>




            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutName2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:startIconDrawable="@android:drawable/ic_secure"
                     app:endIconMode="password_toggle"
                    app:errorEnabled="true">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lbl_password"
                        android:layout_marginTop="@dimen/_14pxv"

                        android:ellipsize="end"
                        android:inputType="textPassword"
                        android:paddingTop="@dimen/_14pxv"
                        android:paddingEnd="@dimen/_18pxh"
                        android:paddingBottom="@dimen/_17pxv"
                        android:singleLine="true"
                        android:textColorHint="@color/black_900_7f"
                        tools:ignore="Autofill" />
                </com.google.android.material.textfield.TextInputLayout>



            </FrameLayout>

            <LinearLayout
                android:id="@+id/linearRowforgotpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/_15pxv"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearRowvectortwo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.52"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/rememberMeCheckbox"
                        android:layout_width="@dimen/_20pxh"
                        android:layout_height="@dimen/_20pxh"
                        android:checked="false"
                        android:layout_marginTop="4dp"
                        android:paddingHorizontal="@dimen/_10pxh"
                        android:paddingVertical="@dimen/_5pxv"
                        android:scaleType="fitCenter"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/txtRememberme"
                         android:layout_width="wrap_content"
                        style="@style/txtInterregular14"

                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_marginBottom="@dimen/_1pxv"
                         android:text="@string/lbl_remember_me"
                        android:visibility="visible" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtForgotpassword"
                    style="@style/txtInterregular14"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="42dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.48"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/msg_forgot_password"
                    android:visibility="visible"
                    tools:text="@string/msg_forgot_password" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/button3"
                style="@style/btnSolidRounded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_42pxv"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_20pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_18pxv"
                android:singleLine="true"
                android:text="@string/lbl_log_in"
                android:textAllCaps="false"
                tools:text="@string/lbl_log_in" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button"
                style="@style/btnSolidRounded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12pxv"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_18pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_18pxv"
                android:singleLine="true"
                android:text="Зарегистрироваться"
                android:textAllCaps="false" />

            <LinearLayout
                android:id="@+id/linearRowlinetwentyone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <View
                    android:id="@+id/lineLineTwentyOne"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_marginBottom="@dimen/_7pxv"
                    android:layout_weight="0.42"
                    android:background="@color/bluegray_100" />

                <TextView
                    android:id="@+id/txtOrwith"
                    style="@style/txtInterregular14_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30pxh"
                    android:layout_weight="0.15"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/lbl_or_with"
                    tools:text="@string/lbl_or_with" />

                <View
                    android:id="@+id/lineLineTwenty"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_21pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_marginBottom="@dimen/_7pxv"
                    android:layout_weight="0.42"
                    android:background="@color/bluegray_100" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_22pxv"
                android:orientation="horizontal">

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/googleSignInButton"
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_90pxh"
                    app:layout_constraintEnd_toEndOf="@+id/button"
                    app:layout_constraintStart_toStartOf="@+id/button"
                    app:layout_constraintTop_toBottomOf="@+id/button" />


            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>